--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -188,7 +188,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="285dp"
                 android:layout_marginTop="10dp"
-                android:background="@color/white_transparency"
+                android:background="@android:color/transparent"
                 android:src="@drawable/ic_searchsymbol" />
         </androidx.cardview.widget.CardView>
 
