--- a/app/src/main/res/layout/activity_expert_search.xml
+++ b/app/src/main/res/layout/activity_expert_search.xml
@@ -71,55 +71,56 @@ tools:context=".ExpertSearchActivity">
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         card_view:srcCompat="@drawable/lightbulb" />
+
     <CheckBox
         android:id="@+id/checkbox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:background="#b3b3ff"
-        android:onClick="onCheckboxClicked"
 
+        android:fontFamily="@font/montserrat"
+        android:onClick="onCheckboxClicked"
         android:text="Experts currently online    "
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.43"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:textColor="@color/colorAccent"
+        app:layout_constraintEnd_toEndOf="@+id/searchCard"
+        app:layout_constraintStart_toStartOf="@+id/searchCard"
+        app:layout_constraintTop_toBottomOf="@+id/searchCard" />
 
 
     <androidx.cardview.widget.CardView
         android:id="@+id/searchCard"
-        android:layout_marginTop="32dp"
         android:layout_width="330dp"
         android:layout_height="52dp"
         android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/ic_search_box"
         app:cardCornerRadius="5dp"
         app:cardElevation="5dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.588"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="490dp"
-        app:layout_constraintTop_toBottomOf="@+id/checkbox"
-        >
+        app:layout_constraintTop_toBottomOf="@+id/textView">
 
         <ImageButton
             android:id="@+id/searchBoxButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="300dp"
+            android:layout_marginLeft="285dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/ic_search_box"
+            android:background="@android:color/transparent"
             android:src="@drawable/ic_searchsymbol" />
 
         <EditText
             android:id="@+id/searchBox"
-            android:layout_width="303dp"
+            android:layout_width="280dp"
             android:layout_height="52dp"
             android:layout_marginBottom="160dp"
-            android:background="@drawable/ic_search_box"
+            android:background="@android:color/transparent"
             android:ems="10"
-            android:hint="Enter a subject, e.g. Math, to search for experts"
+            android:hint="Enter a subject or keyword"
             android:inputType="textPersonName"
             android:paddingStart="15dp" />
 
